<resources>
    <string name="app_name">Story Publisher Adv</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="Continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="submit_via">Submit via&#8230;</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="enter_text">Enter Text</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="sound_off">Sound off</string>
    <string name="sound_on">Sound on</string>
    <string name="question_mark">What is this?</string>
    <string name="SECONDS_ABBREVIATION">sec</string>
    <string name="MINUTES_ABBREVIATION">min</string>
    <string name="story_picture">story picture</string>
    <string name="stage_locked">stage locked</string>
    <string name="edit_image">edit image</string>
    <string name="edit_text">edit text</string>
    <string name="exit_application">Exit Application?</string>
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="registration_title">Registration</string>
    <string name="learn_title">Learn</string>
    <string name="translate_revise_title">Translate + Revise</string>
    <string name="community_work_title">Community Work</string>
    <string name="accuracy_check_title">Accuracy Check</string>
    <string name="voice_studio_title">Voice Studio</string>
    <string name="finalize_title">Finalize</string>
    <string name="share_title">View + Share</string>
    <string name="whole_story_title">Story Tell-Back</string>
    <string name="back_translation_title">Slide Tell-Back</string>
    <string name="title_activity_story_templates">Story Templates</string>
    <string name="title_activity_wordlink_list">Word Links List</string>
    <string name="registration_language_header">Language Information</string>
    <string name="registration_translator_header">Translator Information</string>
    <string name="registration_accuracy_check_header">Accuracy Checker Info</string>
    <string name="registration_trainer_header">Trainer Information</string>
    <string name="registration_archive_header">Archive Information</string>
    <string name="language_hint">Language (being translated into)</string>
    <string name="etnologue_code_hint">Ethnologue Code</string>
    <string name="country_hint">Country</string>
    <string name="location_hint">Province/State/Region</string>
    <string name="town_hint">Village/Town/City</string>
    <string name="lwc_hint">Language (being translated from)</string>
    <string name="orthography_hint">Orthography Status:</string>
    <string name="name_hint">Name</string>
    <string name="spoken_language_hint">Spoken Languages</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">E-mail</string>
    <string name="person_location_hint">Location</string>
    <string name="education_hint">Education Level</string>
    <string name="communication_preference_hint">Communication Preference:</string>
    <string name="location_type_hint">Location Type: </string>
    <string name="bypass_button_text">Skip Registration</string>
    <string name="camera_select_from">Select From:</string>
    <string name="camera_revert_title">Revert To The Original Image?</string>
    <string name="camera_revert_message">Do you want to revert to the original image?</string>
    <string name="welcome_to_story_producer">Welcome to Story Publisher Adv</string>
    <string name="use_internal_demo">Use internal demo</string>
    <string name="please_create_and_then_select_folder">Please create and then Select a new folder, needed for running the demo.</string>
    <string name="registration_exit_title">Exit Registration?</string>
    <string name="registration_exit_message">"Are you sure you want to exit registration? Your changes will not be saved."</string>
    <string name="registration_skip_title">Skip Registration?</string>
    <string name="registration_submit">Submit Registration via...</string>
    <string name="registration_skip_message">"Are you sure you want to skip registration? Don't worry, we'll save what you have so far."</string>
    <string name="registration_submit_title">Submit?</string>
    <string name="registration_submit_complete_message">Are you ready to submit?</string>
    <string name="registration_submit_incomplete_message">You have left some fields blank. Continue with submission?</string>
    <string name="registration_error_title">Submission Error</string>
    <string name="registration_error_message">Please provide an database email address</string>
    <string name="registration_saved_successfully">Registration information saved!</string>
    <string name="registration_SPadv_email"></string>
    <string name="registration_robin_rempel_email">SPapp.training@gmail.com</string>
    <string name="rename_title">Choose a new name</string>
    <string name="rename_title_wordlinks">Type a back translation or spell the name.</string>
    <string name="recordings_title">Recordings</string>
    <string name="backTranslation_recordings_title">Back Translation Recordings </string>
    <string name="consultant_password_title">Consultant Password</string>
    <string name="consultant_password_message">Please enter the consultant password:</string>
    <string name="consultant_incorrect_password_message">Incorrect Password</string>
    <string name="stories_not_found_title">No stories found!</string>
    <string name="stories_not_found_body">No story templates found! The currently selected Workspace folder
        for story templates does not contain usable templates.  Select the appropriate
        \'&lt;font color=\"green\">&lt;b>SP Workspace&lt;/b>&lt;/font>\' folder - found on the
        &lt;font color=\"green\">&lt;b>SD card or in internal memory&lt;/b>&lt;/font>.</string>
    <string name="stories_not_found_in_progress">There are no stories in progress.</string>
    <string name="stories_not_found_completed">There are no completed stories.</string>
    <string name="welcome_screen_select_template_folder_new">
        Story Publisher Adv is different from typical apps.
        You must create a Workspace folder in your phone storage.  You will then download story templates into this folder.&lt;br>&lt;br>
        You can do so by tapping the button below.  Select the &lt;font color=\"green\">1SP Workspace&lt;/font> folder if it already exists or create a new folder and then select it.
    </string>
    <string name="workspace_selection_help">
        &lt;font color=\"gray\">Tell the Story Publisher Adv app where to find story templates.&lt;/font>&lt;br>&lt;br>
        The next screen will be a \'folder picker\'.&lt;br>
        Navigate to the &lt;font color=\"green\">SP Workspace&lt;/font> folder (on the &lt;font color=\"green\">SD Card or in internal memory&lt;/font>), then tap &lt;b>SELECT&lt;/b> at the bottom.
    </string>
    <string name="only_demo_present">
    To download more story templates or access other options, open the main menu (tap the 3-lines icon top left corner). Please complete and submit the Registration to make it "hide".
    </string>
    <string name="welcome_screen_demo_error">Demo functionality coming soon!</string>
    <string-array name="orthography_list">
        <item>None</item>
        <item>Trial</item>
        <item>Stable</item>
    </string-array>
    <string-array name="communication_list">
        <item>Phone</item>
        <item>E-mail</item>
        <item>WhatsApp</item>
        <item>Facebook</item>
    </string-array>
    <string-array name="location_type_list">
        <item>Local</item>
        <item>Remote</item>
    </string-array>
    <string name="orthography_list_none">None</string>
    <string name="orthography_list_trial">Trial</string>
    <string name="orthography_list_stable">Stable</string>
    <string name="communication_list_phone">Phone</string>
    <string name="communication_list_email">E-mail</string>
    <string name="communication_list_whatsapp">WhatsApp</string>
    <string name="communication_list_facebook">Facebook</string>
    <string name="location_type_list_local">Local</string>
    <string name="location_type_list_remote">Remote</string>
    <string name="nav_open">Options</string>
    <string name="nav_close">Close</string>
    <string name="PhoneId">PhoneId</string>
    <string name="send_message_down">Message sending is unavailable at this time. Please try again later.</string>
    <string name="audio_pre_send">Sending Audio</string>
    <string name="audio_Sent">Audio File Sent Successfully</string>
    <string name="audio_Send_Failed">Error occurred, please try sending the audio file again</string>
    <string name="queue_status_upload"> No Connection: File Queued for Delivery</string>
    <string name="queue_status_message_get">No Connection: Cannot Retrieve New Messages</string>
    <string name="queue_status_register">No Connection: Registration Queued for Delivery</string>
    <string name="queue_status_approved">No Connection: Cannot Retrieve Slide Status</string>
    <string name="url_get_messages">/API/GetMessages.php</string>
    <string name="url_send_message">/API/SendMessage.php</string>
    <string name="url_request_review">/API/RequestRemoteReview.php</string>
    <string name="url_get_slide_status">/API/GetSlideStatuses.php</string>
    <string name="url_upload_audio">/API/UploadSlideBacktranslation.php</string>
    <string name="url_register_phone">/API/RegisterPhone.php</string>
    <string name="url_update_fb_token">/API/UpdateFBToken.php</string>
    <string name="api_token">XUKYjBHCsD6OVla8dYAt298D9zkaKSqd</string>
    <string name="url_upload_wordlink">/API/UploadWordLinkRecording.php</string>
    <string name="url_upload_wordlink_backtrans">/API/UploadWordLinkBackTranslation.php</string>
    <string name="url_delete_wordlink_backtrans">/API/DeleteWordLinkBackTranslation.php</string>
    <string name="fill_with_audio_comment">Fill with Audio Comment</string>
    <string name="template_space_title">Warning: Available Space</string>
    <string name="template_space_message">It is best to have 1GB of space available for each story template you will be working on. If you have less space than that, the app might not be able to process your work and export your videos.\n\n   Available space: </string>
    <string name="space_less_than_one_meg">Less than 1mb</string>
    <string name="space_mb">mb</string>
    <string name="space_gb">gb</string>
    <string name="learn_phase_practice">Retell the whole story in your language!</string>
    <string name="learn_phase_overwrite">Are you sure you want to overwrite your current recording?</string>
    <string name="create">Create</string>
    <string name="copy_video_files">Copy</string>
    <string name="export_dumbphone_cb">3gp </string>
    <string name="export_smartphone_cb">mp4 </string>
    <string name="select_all_text">Select all:</string>
    <string name="backup_menu_item">Backup</string>
    <string name="restore_menu_item">Restore</string>
    <string name="delete_menu_item">Delete</string>
    <string name="help_general_usage">General Usage issue</string>
    <string name="help_create_template">Create new templates</string>
    <string name="enter_password">Enter password:</string>
    <string name="no_videos">No Videos to Share</string>
    <string name="enter_new_title">Enter new title:</string>
    <string name="enter_new_language">Enter new language:</string>
    <string name="update_registration">Update Registration</string>
    <string name="update_workspace">Select \'SP Workspace\' folder</string>
    <string name="more_templates">Download More Templates</string>
    <string name="about">About</string>
</resources>