<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:maxHeight="?android:attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <TextView
            android:id="@+id/general_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_general_usage"
            android:textSize="@dimen/header_text" />

        <TextView
            android:id="@+id/create_new_templates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_create_template"
            android:textSize="@dimen/header_text" />

        <TextView
            android:id="@+id/activate_new_templates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_activate_template"
            android:textSize="@dimen/header_text" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:visibility="invisible"
            android:text="@string/enter_password"
            android:textSize="@dimen/large_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_text_field"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"
                android:layout_gravity="left|center_vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/enter_new_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="@dimen/large_text"
            android:layout_margin="20dp"
            android:visibility="invisible"
            android:text="@string/enter_new_language" />

        <Spinner android:id="@+id/new_language"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/orthography_label"
            android:layout_margin="20dp"
            android:visibility="invisible"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ok_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left|center_vertical"
                android:visibility="invisible"
                android:background="@drawable/button"
                android:text="@string/ok" />

            <Button
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right|center_vertical"
                android:visibility="invisible"
                android:background="@drawable/button"
                android:text="@string/cancel" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/darkGray"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"/>

</androidx.drawerlayout.widget.DrawerLayout>
