<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

          <RelativeLayout
              android:id="@+id/backup_btn_layout"
              android:layout_width="match_parent"
              android:maxHeight="?android:attr/actionBarSize"
              android:layout_height="wrap_content">


              <LinearLayout
                  android:id="@+id/button_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentEnd="true"
                  android:orientation="horizontal">

                  <Button
                      android:id="@+id/backup_btn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="5dp"
                      android:layout_marginTop="3dp"
                      android:layout_marginBottom="3dp"
                      android:paddingTop="2dp"
                      android:paddingBottom="2dp"
                      android:layout_gravity="right|center_vertical"
                      android:background="@drawable/button"
                      android:text="@string/backup_menu_item" />
                  <Button
                      android:id="@+id/restore_btn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="5dp"
                      android:layout_marginTop="3dp"
                      android:layout_marginBottom="3dp"
                      android:paddingTop="2dp"
                      android:paddingBottom="2dp"
                      android:layout_gravity="right|center_vertical"
                      android:background="@drawable/button"
                      android:text="@string/restore_menu_item" />
                  <Button
                      android:id="@+id/delete_btn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="3dp"
                      android:layout_marginBottom="3dp"
                      android:paddingTop="2dp"
                      android:paddingBottom="2dp"
                      android:layout_gravity="right|center_vertical"
                      android:background="@drawable/button"
                      android:drawableStart="@android:drawable/ic_menu_delete"
                      android:text="@string/delete_menu_item" />

              </LinearLayout>
          </RelativeLayout>
    </LinearLayout>
      
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/filter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"/>

    </RelativeLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/story_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/demo_only_msg"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="20sp" />
           

</LinearLayout>
